# parq

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: cover-v0.14.tape  demo.cast  tui.tape
doc/: reference.md  tutorial.md
scripts/: demo.sh  make_cover_demo.py  make_cover_v0.14.sh  make_sample.py
src/: cloud.rs  lineage.rs  main.rs  output.rs  parser.rs  progress.rs  source.rs  tui.rs
src/snapshots/: pq__tui__snapshots__analyze_completed.snap  pq__tui__snapshots__completion_popup.snap  pq__tui__snapshots__drill_down_active.snap  pq__tui__snapshots__empty.snap  pq__tui__snapshots__error_state.snap  pq__tui__snapshots__explain_panel_estimates.snap  pq__tui__snapshots__explain_pruning_active.snap  pq__tui__snapshots__help_overlay.snap  pq__tui__snapshots__show_sql.snap  pq__tui__snapshots__with_results.snap
tests/: cli_chain.rs
