[package]
name = "pq"
version = "0.7.0"
edition = "2021"
description = "jq for Parquet — query parquet files with a concise expression syntax"
authors = ["Hua Wang <thehwang@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/thehwang/parq"
homepage = "https://github.com/thehwang/parq"
readme = "README.md"
keywords = ["parquet", "cli", "jq", "duckdb", "data"]
categories = ["command-line-utilities", "database"]

build = "build.rs"

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["bundled", "json"] }
anyhow = "1.0"
serde_json = "1.0"
comfy-table = "7.1"
colored = "2.1"
# tui-textarea 0.7 is built against ratatui 0.29 / crossterm 0.28 — keep these
# pinned together until tui-textarea ships a ratatui 0.30 release.
ratatui = "0.29"
crossterm = "0.28"
# `search` feature gates set_search_pattern/set_search_style — used by the
# Query panel's "highlight every reference to the active source column"
# (semantic sync, v0.6). It pulls in the `regex` crate transitively, but
# we already escape user input in regex_escape() so the surface is safe.
tui-textarea = { version = "0.7", features = ["search"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
