[package]
name = "pq"
version = "0.11.1"
edition = "2021"
description = "jq for Parquet — query parquet files with a concise expression syntax"
authors = ["Hua Wang <thehwang@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/thehwang/parq"
homepage = "https://github.com/thehwang/parq"
readme = "README.md"
keywords = ["parquet", "cli", "jq", "duckdb", "data"]
categories = ["command-line-utilities", "database"]

build = "build.rs"

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1", features = ["bundled", "json"] }
anyhow = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
comfy-table = "7.1"
colored = "2.1"
# tui-textarea 0.7 is built against ratatui 0.29 / crossterm 0.28 — keep these
# pinned together until tui-textarea ships a ratatui 0.30 release.
ratatui = "0.29"
crossterm = "0.28"
# `search` feature gates set_search_pattern/set_search_style — used by the
# Query panel's "highlight every reference to the active source column"
# (semantic sync, v0.6). It pulls in the `regex` crate transitively, but
# we already escape user input in regex_escape() so the surface is safe.
tui-textarea = { version = "0.7", features = ["search"] }
# v0.9: stdin auto-spool. When the user pipes a parquet file in
# (`cat f.parquet | pq -`) the resulting fd is a pipe — DuckDB's
# parquet reader needs random access (footer-trailer format) and
# rejects pipes with ESPIPE. We drain to a NamedTempFile so the
# DuckDB-side path is a normal seekable file. Tempfile cleans up on
# drop. Pulled in by other deps already; making it explicit is free.
tempfile = "3"
# v0.9: detect whether stdin is seekable (regular file, e.g. shell
# `<` redirect) vs a pipe — used to skip the spool for the redirect
# case. Already a transitive dep through tempfile / duckdb-rs.
libc = "0.2"

[dev-dependencies]
# v0.8 snapshot tests for the TUI rendering. We feed a fake App into
# ratatui's TestBackend, dump the resulting text buffer, and let insta
# diff it against committed `*.snap` files. Keeps regressions in
# layout / labels / panel composition from sneaking in unnoticed.
insta = "1.40"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
